--- a/src/main/resources/assets/gabecustmod/lang/en_us.json
+++ b/src/main/resources/assets/gabecustmod/lang/en_us.json
@@ -1,7 +1,10 @@
 {
-  "item.gabecustmod.aluminum_ingot": "Aluminum Ore",
+  "item.gabecustmod.raw_aluminum": "Raw Aluminum",
+  "item.gabecustmod.aluminum_ingot": "Aluminum Ingot",
   "item.gabecustmod.purple_gold_ingot": "Purple Gold Ore",
 
+  "block.gabecustmod.aluminum_ore_block": "Aluminum Ore",
+  "block.gabecustmod.raw_aluminum_block": "Block of Raw Aluminum",
   "block.gabecustmod.aluminum_block": "Aluminum Block",
   "block.gabecustmod.purple_gold_block": "Purple Gold Block",
 
