feat: adicionado novo custom item - formão

--- a/src/main/resources/assets/gabecustmod/lang/en_us.json
+++ b/src/main/resources/assets/gabecustmod/lang/en_us.json
@@ -3,6 +3,8 @@
   "item.gabecustmod.aluminum_ingot": "Aluminum Ingot",
   "item.gabecustmod.purple_gold_ingot": "Purple Gold Ore",
 
+  "item.gabecustmod.chisel": "Chisel",
+
   "block.gabecustmod.aluminum_ore": "Aluminum Ore",
   "block.gabecustmod.raw_aluminum_block": "Block of Raw Aluminum",
   "block.gabecustmod.aluminum_block": "Block of  Aluminum",
