feat: adicionado old golden apple, com efeitos da Notch Apple original

--- a/src/main/resources/assets/gabecustmod/lang/en_us.json
+++ b/src/main/resources/assets/gabecustmod/lang/en_us.json
@@ -5,6 +5,8 @@
 
   "item.gabecustmod.chisel": "Chisel",
 
+  "item.gabecustmod.old_enchanted_golden_apple": "Old Enchanted Golden Apple",
+
   "block.gabecustmod.aluminum_ore": "Aluminum Ore",
   "block.gabecustmod.raw_aluminum_block": "Block of Raw Aluminum",
   "block.gabecustmod.aluminum_block": "Block of  Aluminum",
