feat: added old enchanted golden apple recipe and tooltip for the chisel item

--- a/src/main/resources/assets/gabecustmod/lang/en_us.json
+++ b/src/main/resources/assets/gabecustmod/lang/en_us.json
@@ -12,10 +12,13 @@
   "block.gabecustmod.aluminum_block": "Block of  Aluminum",
   "block.gabecustmod.purple_gold_block": "Block of Purple Gold",
   "block.gabecustmod.old_gold_block": "Old Block of Gold",
+  "block.gabecustmod.older_gold_block": "Older Block of Gold",
   "block.gabecustmod.old_iron_block": "Old Block of Iron",
   "block.gabecustmod.old_diamond_block": "Old Block of Diamond",
   "block.gabecustmod.old_emerald_block": "Old Block of Emerald",
 
-  "creativetab.gabecustmod.gabecust_items": "GabeCust Items",
-  "creativetab.gabecustmod.gabecust_blocks": "GabeCust Blocks"
+  "creativetab.gabecustmod.gabecust_items": "Purple Gold Mod Items",
+  "creativetab.gabecustmod.gabecust_blocks": "Purple Gold Mod Blocks",
+
+  "tooltip.gabecustmod.chisel": "§7Turn mineral blocks in its old variants§r"
 }
